--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,16 @@ textarea {
 textarea {
   resize: none;
 }
+
+.spinner-animated {
+  animation: loading 1.3s linear infinite;
+}
+
+@keyframes loading {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
