--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+@page a4 {
+  size: a4 portrait;
+  margin: 0;
+}
+
+@page letter {
+  size: 22.41cm 18.73cm;
+  margin: 0;
+}
+
 html,
 body {
   @apply bg-neutral-200;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
+}
+
+@media print {
+  body,
+  html {
+    margin: 0;
+    padding: 0;
+  }
 }
 
 /* Chrome, Safari, Edge, Opera */
