--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -1,14 +1,18 @@
 .checkbox {
-  border-radius: 99999px;
+  position: absolute;
+  appearance: none;
+  outline: 1px solid black;
+  border-radius: 9999px;
+  box-shadow: inset 0 0 0 0.125rem #fff;
+  background-color: white;
+  display: inline-block;
+  aspect-ratio: 1;
+  vertical-align: bottom;
+  -webkit-print-color-adjust: exact !important; /* Chrome, Safari 6 – 15.3, Edge */
+  color-adjust: exact !important; /* Firefox 48 – 96 */
+  print-color-adjust: exact !important;
 }
 
-.checkbox[data-checked="true"]::before {
-  content: "";
-  position: absolute;
-  height: 60%;
-  aspect-ratio: 1;
-
+.checkbox:checked {
   background-color: black;
-  transform: translate(-50%, -50%);
-  border-radius: inherit;
 }
