--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,13 @@
 @page a4 {
   size: a4 portrait;
   margin: 0mm;
+  padding: 0;
 }
 
 @page letter {
-  size: 22.41cm 18.54cm;
-  margin: 0;
+  size: 22.41cm 15.73cm;
+  margin: 0mm;
+  padding: 0;
 }
 
 html,
@@ -17,14 +19,8 @@ body {
   @apply bg-neutral-200;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
-}
-
-@media print {
-  body,
-  html {
-    margin: 0;
-    padding: 0;
-  }
+  margin: 0;
+  padding: 0;
 }
 
 /* Chrome, Safari, Edge, Opera */
